set the configuration global

--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,2 +1,14 @@
 customer.params.x=15
 customer.params.y=15
+
+# docker path
+spring.docker.compose.file =customer-service/compose.yaml
+# Jpa
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+# Grapql
+spring.graphql.graphiql.enabled=true
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+# /api-docs endpoint custom path
+springdoc.api-docs.path=/api-docs
