--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,12 @@
 global.params.p1=7777
 global.params.p2=7777
+
+# spring cloud
+spring.cloud.discovery.enabled=true
+eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+# spring config
+spring.cloud.config.enabled=true
+# actuator
+# activate actuator service  [ health,refresh, ]
+management.endpoints.web.exposure.include=*
