--- a/application.properties
+++ b/application.properties
@@ -4,7 +4,7 @@ global.params.p2=7777
 # spring cloud
 spring.cloud.discovery.enabled=true
 eureka.instance.prefer-ip-address=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
 # spring config
 spring.cloud.config.enabled=true
 # actuator
