--- a/customer-service.properties
+++ b/customer-service.properties
@@ -2,7 +2,7 @@ customer.params.x=15
 customer.params.y=15
 
 # docker path
-spring.docker.compose.file =customer-service/compose.yaml
+# spring.docker.compose.file =customer-service/compose.yaml
 # Jpa
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
