WIP: customer db config

--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,6 +1,14 @@
 customer.params.x=15
 customer.params.y=15
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/customer-db
+spring.datasource.username=root
+spring.datasource.password=root
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 # docker path
 # spring.docker.compose.file =customer-service/compose.yaml
 # Jpa
