Ok service customer

--- a/customer-service.properties
+++ b/customer-service.properties
@@ -4,11 +4,10 @@ customer.params.y=15
 spring.datasource.url=jdbc:postgresql://localhost:5434/customer-db
 spring.datasource.username=root
 spring.datasource.password=root
-
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
 # docker path
 # spring.docker.compose.file =customer-service/compose.yaml
 # Jpa
