Ok service customer db

--- a/customer-service.properties
+++ b/customer-service.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:postgresql://customer-service-db:5434/customer-db
 spring.datasource.username=root
 spring.datasource.password=root
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
