--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,11 +1,10 @@
 customer.params.x=15
 customer.params.y=15
 
-spring.datasource.url=jdbc:postgresql://customer-service-db:5434/customer-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/customer-db
 spring.datasource.username=root
 spring.datasource.password=root
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
