--- a/account-service.properties
+++ b/account-service.properties
@@ -1,8 +1,13 @@
 # docker path
-spring.docker.compose.file =account-service/compose.yaml
+# spring.docker.compose.file =account-service/compose.yaml
 # JPA
-spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:postgresql://account-service-db:5435/account-db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 # Graphql
 spring.graphql.graphiql.enabled=true
 # swagger-ui custom path
