chnage to localhost

--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,9 +1,9 @@
 customer.params.x=15
 customer.params.y=15
 
-spring.datasource.url=jdbc:postgresql://localhost:5434/customer-db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
