--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,12 +1,13 @@
 customer.params.x=15
 customer.params.y=15
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:postgresql://customer-service-db:5434/customer-db
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update
+
 
 # docker path
 # spring.docker.compose.file =customer-service/compose.yaml
