--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,12 +1,12 @@
 customer.params.x=15
 customer.params.y=15
 
-# spring.datasource.url=jdbc:postgresql://customer-service-db:5434/customer-db
-# spring.datasource.username=root
-# spring.datasource.password=root
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.show-sql=true
-# spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5434/customer-db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 # docker path
