--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,7 +1,7 @@
 customer.params.x=15
 customer.params.y=15
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://customer-service-db:5434/customer-db
+spring.datasource.url=jdbc:postgresql://localost:5434/customer-db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
