--- a/account-service.properties
+++ b/account-service.properties
@@ -3,7 +3,7 @@
 # JPA
 spring.datasource.url=jdbc:postgresql://localhost:5433/account-db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
