--- a/customer-service.properties
+++ b/customer-service.properties
@@ -3,7 +3,7 @@ customer.params.y=15
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5431/customer-db
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
